bk_ida/gccida/g2/try_combine
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2101:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v138; // r8d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2148:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v185; // edx 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2203:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v240; // r14d 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2207:4: error: expected ';' after expression
rtx v244; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2207:5: error: use of undeclared identifier 'v244'
rtx v244; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2210:4: error: expected ';' after expression
rtx v247; // r15 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2210:5: error: use of undeclared identifier 'v247'
rtx v247; // r15 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2237:4: error: expected ';' after expression
rtx v274; // r14 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2237:5: error: use of undeclared identifier 'v274'
rtx v274; // r14 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2262:4: error: expected ';' after expression
rtx elim_i2b; // [rsp+20h] [rbp-F8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2262:5: error: use of undeclared identifier 'elim_i2b'
rtx elim_i2b; // [rsp+20h] [rbp-F8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2263:4: error: expected ';' after expression
rtx elim_i2e; // [rsp+20h] [rbp-F8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2263:5: error: use of undeclared identifier 'elim_i2e'
rtx elim_i2e; // [rsp+20h] [rbp-F8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2269:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode new_desta; // [rsp+30h] [rbp-E8h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2270:4: error: expected ';' after expression
rtx new_destc; // [rsp+30h] [rbp-E8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2270:5: error: use of undeclared identifier 'new_destc'
rtx new_destc; // [rsp+30h] [rbp-E8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2271:4: error: expected ';' after expression
rtx new_destb; // [rsp+30h] [rbp-E8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2271:5: error: use of undeclared identifier 'new_destb'
rtx new_destb; // [rsp+30h] [rbp-E8h] 
    ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/combine.c:2273:4: error: expected ';' after expression
rtx i2notesa; // [rsp+38h] [rbp-E0h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/try_combine/src/obj/combine.o] Error 1
